--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uy-joy-baraka",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www.js",
@@ -8,7 +8,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@socket.io/redis-adapter": "^8.2.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
@@ -22,7 +21,6 @@
     "express-rate-limit": "^6.7.0",
     "form-data": "^4.0.0",
     "http-errors": "~1.6.3",
-    "ioredis": "^5.3.2",
     "jest": "^29.5.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
@@ -31,12 +29,10 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
-    "redis": "^4.6.7",
+    "readline": "^1.3.0",
     "sequelize": "^6.32.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.1",
-    "socket.io-redis": "^6.1.1",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
   }
 }
