--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
+    "mdb-ui-kit": "^6.4.0",
     "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
+    "qs": "^6.11.2",
     "readline": "^1.3.0",
     "sequelize": "^6.32.0",
     "slugify": "^1.6.6",
